Fixed the text getting cutoff on the main view

--- a/src/styles/problem.css
+++ b/src/styles/problem.css
@@ -3,7 +3,7 @@
 }
 
 .problem-page-header-container {
-    height: 4.1rem;
+    height: 4.2rem;
     overflow-y: hidden;
     overflow-x: visible;
 }
